--- a/progassignments/files/personal_website.html
+++ b/progassignments/files/personal_website.html
@@ -43,13 +43,13 @@ Hi there! My name is Butch and I am a Computer Science student at WSU. My CS int
 
 <ul>
 <li>Feline High School</li>
-<li>June 2017</li>
+<li>June 2016</li>
 <li>3.5 GPA</li>
 </ul>
 
 <h2>Projects</h2>
 
-<h3>Markdown to HTML Coverter</h3>
+<h3>Markdown to HTML Converter</h3>
 
 <ul>
 <li>Python program to convert .md files to .html files</li>
